fix: Add spacing between work history paragraphs.

--- a/src/assets/styles/components/_entry.scss
+++ b/src/assets/styles/components/_entry.scss
@@ -17,16 +17,18 @@
         margin-bottom: 0.25rem;
     }
 
-    &__title {
-    }
-
     &__organization {
         font-size: 1.125rem;
     }
 
     &__content {
         max-width: 60ch;
+
         * > * {
+            margin-top: 1em;
+        }
+
+        > p {
             margin-top: 1em;
         }
     }
